                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-07-2006 fixed: files within rar/zips in rar/zips (double archived) would not play
 - 07-07-2006 changed: rewrote how rar/zip's urls are handled, less workarounds needed. (expect glitches)
 - 07-07-2006 fixed: [ 1518898 ] Trying to delete *.m3u file, deletes my music instead...
 - 07-07-2006 updated: German language file
 - 07-07-2006 updated: Turkish language file (Thnx to necipfazil)
 - 07-07-2006 updated: Polish language file (Thnx to smuto and the Polish Community Forum)
 - 07-07-2006 updated: Dutch language file (Thnx to nightspirit)
 - 07-07-2006 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 07-07-2006 changed: cleanup of guiaudiomanager
 - 07-06-2006 fixed: delete and rename in my videos were broken.
 - 07-06-2006 changed: visualisations now load settings from userdata/visualisations. cleaned up saville and boxalizer.
 - 07-07-2006 fixed: random lockups due to thread issues with settings bool cache (once more ;))
 - 06-07-2006 fixed: HttpApi SendKey should now process "keyboard" codes again
 - 06-07-2006 fixed: HttpApi should process commands slightly quicker
 - 06-07-2006 fixed: Progress dialog in Python wouldn't display the third line of text.
 - 06-07-2006 fixed: bug when canceling input of gamepad lock code.
 - 06-07-2006 changed: removed o: mapping. t: is now mapped to the user data folder. if you run from a dvd it will be set to the savegame folder and the userdata folder will be cached on first run.
 - 06-07-2006 fixed: pressing play dvd and autorun would attempt to start mplayer on some dvd's
 - 06-07-2006 fixed: random lockups due to thread issues with settings bool cache.